@@ -47,7 +47,6 @@ from astroid import nodes
 from pylint.checkers import BaseChecker, BaseTokenChecker, utils
 from pylint.checkers.utils import check_messages
 from pylint.interfaces import IAstroidChecker, IRawChecker, ITokenChecker
-from pylint.utils import get_global_option
 
 if TYPE_CHECKING:
     from typing import Counter  # typing.Counter added in Python 3.6.1
@@ -211,12 +210,6 @@ MSGS = {  # pylint: disable=consider-using-namedtuple-or-dataclass
         "format-string-without-interpolation",
         "Used when we detect a string that does not have any interpolation variables, "
         "in which case it can be either a normal string without formatting or a bug in the code.",
-    ),
-    "W1311": (
-        "F-strings are not supported by all versions included in the py-version setting",
-        "using-f-string-in-unsupported-version",
-        "Used when the py-version set by the user is lower than 3.6 and pylint encounters "
-        "a f-string.",
     ),
 }
 
@@ -417,10 +410,8 @@ class StringFormatChecker(BaseChecker):
                         )
 
     @check_messages("f-string-without-interpolation")
-    @check_messages("using-f-string-in-unsupported-version")
     def visit_joinedstr(self, node: nodes.JoinedStr) -> None:
         self._check_interpolation(node)
-        self._check_unsupported_version(node)
 
     def _check_interpolation(self, node: nodes.JoinedStr) -> None:
         if isinstance(node.parent, nodes.FormattedValue):
@@ -429,10 +420,6 @@ class StringFormatChecker(BaseChecker):
             if isinstance(value, nodes.FormattedValue):
                 return
         self.add_message("f-string-without-interpolation", node=node)
-
-    def _check_unsupported_version(self, node: nodes.JoinedStr) -> None:
-        if get_global_option(self, "py-version") < (3, 6):
-            self.add_message("using-f-string-in-unsupported-version", node=node)
 
     @check_messages(*MSGS)
     def visit_call(self, node: nodes.Call) -> None:
